# bqtools

./: .editorconfig  .envrc.example  .gitlab-ci.yml  README.md  pyproject.toml  scripts.py
bqtools/: app.py
bqtools/functions/: all.py  all.sql
bqtools/migration/: commands.py  config.py  setup.py  types.py  utils.py
bqtools/schema/: meter.json  meter.py  meter.sql  meter_daily.json  meter_daily.py  meter_daily.sql
migrations/: R__create_user_defined_functions.sql  U1.0__create_colours_table.sql  U1.0__create_meter_table.sql  U1.1__create_meter_daily_table.sql  U1.1__create_users_table.sql  V1.0__create_colours_table.sql  V1.0__create_meter_table.sql  V1.1__create_users_table.sql
tests/: test_bqtools.py  test_connection.py
tests/migration/integration/: test_connection.py  test_managing_table.py  test_migration.py  test_rollback.py
tests/migration/integration/mgrtns/: R__insert_one_car.sql  R__insert_two_fruits.sql  U1.1__create_fruit_table.sql  U1.2__create_car_table.sql  V1.1__create_fruit_table.sql  V1.2__create_car_table.sql
tests/migration/unit/: test_getting_checksum.py  test_getting_entry.py  test_getting_parts.py  test_getting_path.py  test_listing_entries.py  test_reading_entry.py  test_validations.py
tests/migration/utils/: test_getting_checksum.py  test_getting_entry.py  test_getting_parts.py  test_getting_path.py  test_getting_rollback_entry.py  test_listing_entries.py  test_reading_entry.py  test_validations.py
