[tool.poetry]
name = "bqtools"
version = "0.1.0"
description = "Bueno-defined persistent functions/scripts on BigQuery by using SQL expressions or JavaScript"
authors = ["Bueno Systems <hello@buenosystems.com.au>"]

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-bigquery = "^1.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"

[[tool.poetry.source]]
name = "bueno"
url = "https://nexus.bueno-analytics.com/repository/pypi-group/simple"
secondary = true

[tool.poetry.scripts]
app = "bqtools.app:run"
test = "scripts:pytest"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
